# diceroll-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
include/: add_node.hpp  dice_expr.hpp  distribution.hpp  expression_node.hpp  integer_node.hpp  roll_node.hpp  util.hpp
src/: add_node.cpp  dice_expr.cpp  distribution.cpp  integer_node.cpp  roll_node.cpp  util.cpp
test/: main.cpp  test_add_node.cpp  test_dice_expr.cpp  test_distribution.cpp  test_integer_node.cpp  test_roll_node.cpp  test_util.cpp
